// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building enumeration with empty enumeration item description should have mismatched input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 14, line: 2, token: entity",
]
`;

exports[`when building enumeration with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 6, token: TrailingText",
]
`;

exports[`when building enumeration with lowercase enumeration name should have extraneous input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 14, line: 2, token: entity",
]
`;

exports[`when building enumeration with missing documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'item' expecting {'documentation', METAED_ID}, column: 4, line: 3, token: item",
]
`;

exports[`when building enumeration with missing enumeration item should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting 'item', column: 0, line: 5, token: End Namespace",
]
`;

exports[`when building enumeration with missing enumeration name should have missing id error 1`] = `
Array [
  "missing ID at 'documentation', column: 4, line: 3, token: documentation",
]
`;
